Fixed spacing on splash page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,6 +75,7 @@ input {
     margin: 8px;
     border: 1px #cec4c4 solid;
     height: 24px;
+    border-radius: 4px;
 }
 
 .modal-header {
@@ -113,12 +114,14 @@ input {
 }
 
 .modal-search-date, .modal-party-size {
-    width: 150px
+    width: 150px;
+    border: 1px #c1b1b1 solid;
+    padding-left: 4px;
 }
 
 .modal-form-button {
     background-color: #db3434;
-    border: 1px solid black;
+    border: 1px #c1b1b1 solid;
     color: white;
     border-radius: 3px;
     height: 45px;
@@ -132,13 +135,14 @@ form * {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 4px;
 }
 
 .form-button {
     background-color: #db3434;
-    border: 1px solid black;
+    border: 1px #c1b1b1 solid;
     color: white;
-    border-radius: 3px;
+    border-radius: 4px;
     height: 45px;
     margin: auto;
     width: 325px;
@@ -157,8 +161,10 @@ nav {
      display: flex;
     /* flex-direction: row; */
     /* font-family: 'Josefin Sans', sans-serif; */
-    padding: 9px 9px 11px 9px;
+    /* padding: 9px 9px 11px 9px; */
     font-size: 22px;
+    align-items: flex-end;
+    padding-bottom: 5px;
 }
 
 .right-nav {
@@ -206,7 +212,7 @@ nav {
 
 .signup-button { 
     background-color: teal;
-    border: 1px solid black;
+    border: 1px #c1b1b1 solid;
     color: white;
     border-radius: 3px;
     /* height: 35px; */
@@ -400,6 +406,13 @@ nav {
 
 .party-size {
     width: 260px;
+    padding-left: 4px;
+    border: 1px #c1b1b1 solid;
+}
+
+.time {
+    padding: 4px;
+    border: 1px #c1b1b1 solid;
 }
 
 .date {
@@ -789,6 +802,7 @@ nav {
     display: block;
     width: 100%;
     opacity: .90;
+    margin-top: 8px;
 }
 
 .splash-carousel-trending-header {
@@ -876,6 +890,7 @@ nav {
 .logo-banner {
     width: 100%;
     height: 180px;
+    margin-top: 8px
 }   
 
 .parent-form {
